# ELANORA

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  sonar-project.properties
website/backend/: .coveragerc  .flake8  .pre-commit-config.yaml  LOGGING_GUIDE.md  mypy.ini  pyproject.toml
website/backend/app/: main.py
website/backend/app/api/v1/: auth.py  git.py  instance.py  invitation.py  location.py  project.py  tier.py  user.py
website/backend/app/core/: centralized_logging.py  config.py  exception_handler.py  jwt.py  load_env.py  logging.py
website/backend/app/crud/: annotation.py  annotation_value.py  association.py  associations.py  comment.py  conflict.py  conflicts.py  elan_file.py  elan_file_media.py  instance.py  invitation.py  project.py  tier.py  tier_group.py  tier_section.py  user.py
website/backend/app/db/: README.md  database.py  init_db.py
website/backend/app/dependencies/: elan_validation.py
website/backend/app/dependency/: database.py  elan_validation.py  user.py
website/backend/app/examples/: logging_examples.py
website/backend/app/middleware/: csrf.py  security_headers.py
website/backend/app/model/: __init__.py  address.py  annotation.py  annotation_standard.py  annotation_value.py  association.py  associations.py  city.py  comment.py  conflict.py  country.py  elan_file.py  elan_file_media.py  enums.py  instance.py  invitation.py  project.py  tier.py  tier_group.py  tier_section.py  user.py
website/backend/app/models/: __init__.py  associations.py  city.py  comment.py  conflict.py  country.py  elan_file.py  invitation.py  project.py  tier.py  user.py
website/backend/app/schema/common/: base.py  git.py  user.py
website/backend/app/schema/requests/: git.py  invitation.py  register_with_invitation.py  tier.py  user.py
website/backend/app/schemas/: base.py  token.py
website/backend/app/service/: address.py  elan.py  email.py  email_service.py  git.py  git_diff_parser.py  git_operations.py  instance.py  invitation.py  location.py  tier.py  user.py
website/backend/app/services/: git.py
website/backend/app/utils/: database.py  file_processing.py  project_setup_utils.py  validation.py
website/backend/docker/: Dockerfile.dev  Dockerfile.prod
website/backend/tests/unit/: test_instance_query.py
(+142 files in other folders)
